# ChessCpp

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
include/: Board.h  UI.h
src/: Board.cpp  UI.cpp  main.cpp  test.cpp  util.cpp
